# CivicInt

./: .env.example  .gitignore  CODE_REVIEW.md  Lapland_Data_Sources - Taulukko1.csv  README.md  lapland_municipal_decisions (1).csv  pyproject.toml  watchdog_mvp_spec.md
docs/: LAPLAND_DATA_COLLECTION_PLAN.md
watchdog/: cli.py  config.py  scheduler.py  seed_lapland_sources.py
watchdog/app/: main.py
watchdog/app/static/: app.js  style.css
watchdog/app/templates/: base.html  dossier.html  feed.html
watchdog/app/templates/admin/: dashboard.html
watchdog/connectors/: __init__.py  base.py  cloudnc.py  dynasty.py  municipal_website.py  tweb.py
watchdog/db/: models.py
watchdog/pipeline/: case_builder.py  discover.py  extract.py  fetch.py  triage.py
