[project]
name = "watchdog"
version = "0.1.0"
description = "Environmental document watchdog for Finnish municipalities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    
    # HTTP client
    "httpx>=0.25.0",
    
    # PDF processing
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    
    # LLM
    "openai>=1.3.0",
    
    # Scheduling
    "apscheduler>=3.10.0",
    
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Auth & security
    "passlib>=1.7.4",
    "itsdangerous>=2.1.2",
    
    # Email
    "aiosmtplib>=3.0.0",
    
    # Utilities
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[project.scripts]
watchdog-cli = "watchdog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
